Fix z-index of top nav

--- a/components/top-nav/TopNav.module.css
+++ b/components/top-nav/TopNav.module.css
@@ -1,4 +1,5 @@
 .top_nav {
   position: fixed;
   top: 0;
+  z-index: 2;
 }
